// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle renders correctly 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r0:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly label 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rc:"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when checked 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="true"
      data-disabled="false"
    >
      <input
        aria-checked="true"
        checked=""
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r2:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when disabled 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="true"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="true"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        disabled=""
        id=":r4:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

.cache-1ot9oc6-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #ac2740;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r6:"
        name="test"
        type="checkbox"
      />
    </div>
    test
    <sup>
      <svg
        class="cache-1ot9oc6-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly when required with label left 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ot9oc6-StyledIcon-sizeStyles {
  vertical-align: middle;
  fill: #ac2740;
  height: 10px;
  width: 10px;
  min-width: 10px;
  min-height: 10px;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    test
    <sup>
      <svg
        class="cache-1ot9oc6-StyledIcon-sizeStyles e5nqbfp0"
        viewBox="0 0 24 24"
      >
        <path
          d="M10,2H14L13.21,9.91L19.66,5.27L21.66,8.73L14.42,12L21.66,15.27L19.66,18.73L13.21,14.09L14,22H10L10.79,14.09L4.34,18.73L2.34,15.27L9.58,12L2.34,8.73L4.34,5.27L10.79,9.91L10,2Z"
        />
      </svg>
    </sup>
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":r8:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with complex label 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ri:"
        name="test"
        type="checkbox"
      />
    </div>
    <span>
      Custom label rendered
    </span>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with custom labels on right 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":rg:"
        name="test"
        type="checkbox"
      />
    </div>
    This is a label
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with labels on left 1`] = `
<DocumentFragment>
  .cache-wk469-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-wk469-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 22.04px;
}

.cache-wk469-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1mnivj5-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 48px;
  height: 24px;
}

.cache-1mnivj5-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 16px;
  height: 16px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1mnivj5-StyledToggle:focus-within,
.cache-1mnivj5-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='false']:active:after {
  width: 22.04px;
}

.cache-1mnivj5-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1mnivj5-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1mnivj5-StyledToggle[data-checked='true']:focus-within,
.cache-1mnivj5-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1mnivj5-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-wk469-StyledLabel e1wstm610"
  >
    This is a label
    <div
      class="cache-1mnivj5-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":re:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;

exports[`Toggle renders correctly with non default size 1`] = `
<DocumentFragment>
  .cache-3vtkuj-StyledLabel {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  gap: 8px;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-fit-content;
  width: -moz-fit-content;
  width: fit-content;
  cursor: pointer;
}

.cache-3vtkuj-StyledLabel:active .e1wstm612[data-disabled='false']:after {
  width: 16.53px;
}

.cache-3vtkuj-StyledLabel[aria-disabled='true'] {
  cursor: not-allowed;
  color: #b5b7bd;
}

.cache-1ttien0-StyledToggle {
  box-sizing: content-box;
  outline: none;
  overflow: hidden;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  border: none;
  border-radius: 16px;
  position: relative;
  -webkit-transition: all 300ms;
  transition: all 300ms;
  background-color: #e9eaeb;
  width: 40px;
  height: 20px;
}

.cache-1ttien0-StyledToggle:after {
  content: '';
  position: absolute;
  top: 4px;
  left: 5px;
  width: 12px;
  height: 12px;
  border-radius: 100%;
  background-color: #f9f9fa;
  -webkit-transition: all 300ms;
  transition: all 300ms;
}

.cache-1ttien0-StyledToggle:focus-within,
.cache-1ttien0-StyledToggle:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1ttien0-StyledToggle[data-disabled='false']:active:after {
  width: 16.53px;
}

.cache-1ttien0-StyledToggle[data-checked='true'] {
  color: #222638;
  background-color: #521094;
}

.cache-1ttien0-StyledToggle[data-checked='true']:after {
  left: calc(100% - 5px);
  -webkit-transform: translateX(-100%);
  -moz-transform: translateX(-100%);
  -ms-transform: translateX(-100%);
  transform: translateX(-100%);
}

.cache-1ttien0-StyledToggle[data-checked='true']:focus-within,
.cache-1ttien0-StyledToggle[data-checked='true']:focus {
  box-shadow: 0px 0px 0px 3px #5e127e40;
}

.cache-1ttien0-StyledToggle[data-disabled='true'] {
  background: #d9dadd;
}

.cache-1ttien0-StyledToggle[data-disabled='true'][data-checked='true'] {
  background: #e6daff;
}

.cache-1myp2ct-StyledCheckbox {
  position: absolute;
  opacity: 0;
  top: 0;
  left: 0;
  width: 100%;
  height: 100%;
  cursor: pointer;
}

.cache-1myp2ct-StyledCheckbox[disabled] {
  cursor: not-allowed;
}

<label
    aria-disabled="false"
    class="cache-3vtkuj-StyledLabel e1wstm610"
  >
    <div
      class="cache-1ttien0-StyledToggle e1wstm612"
      data-checked="false"
      data-disabled="false"
    >
      <input
        aria-checked="false"
        class="cache-1myp2ct-StyledCheckbox e1wstm611"
        id=":ra:"
        name="test"
        type="checkbox"
      />
    </div>
  </label>
</DocumentFragment>
`;
